Update FraudCheckerWithHistory.java